<resources>
    <string name="app_name">Mashup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Your Mashups</string>
    <string name="second_fragment_label">Details</string>

    <string name="select_video"><u>Select video</u></string>
    <string name="select_audio"><u>Select audio</u></string>
    <string name="thumbnail">Thumbnail representing the mashup</string>
    <string name="title_place_holder">Placeholder title</string>
    <string name="author_placeholder">Placeholder duration</string>
    <string name="description_placeholder">Description placeholder</string>
    <string name="duration_placeholder">Duration Placeholder</string>
    <string name="fragment_creator_label">Mashup Creator</string>
    <string name="fragment_creator_choose_video_label">Select Video</string>
    <string name="fragment_creator_choose_audio_label">Select Audio</string>
    <string name="save_button_text"><u>SAVE</u></string>
    <string name="discard_your_mashup">Discard your mashup?</string>
    <string name="your_progress_will_be_irreversibly_lost">Your progress will be irreversibly lost.</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="save_dialog_input_description">Description</string>
    <string name="save_dialog_input_title">Title</string>
    <string name="save_dialog_title">Save your mashup</string>
    <string name="save">Save</string>
    <string name="empty_video_list_message">Looks like you have not added any videos yet</string>
    <string name="empty_audio_list_message">Looks like you have not added any audio tracks yet</string>
    <string name="empty_mashup_list_message">Looks like you have no mashups created</string>
    <string name="share">Share</string>
    <string name="wave_form_description">Wave function of the selected audio track</string>
    <string name="playPauseButton_description">Play and pause button</string>
    <string name="rewindButton_description">Restart video button</string>
    <string name="select_audio_description">Floating action button to upload an audio file from the device</string>
    <string name="select_video_description">Floating action button to upload a video file from the device</string>
    <string name="addMashup_description">Floating action button to add a new mashup</string>
    <string name="play_button_description">Play button</string>
    <string name="pause_button_description">Pause button</string>
    <string name="out_of">/</string>
    <string name="exit_fullscreen_description">Exit fullscreen</string>
</resources>