<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Details.DetailsFragment"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/thumbnail2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/blackhole"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail"/>

        <TextView
            android:id="@+id/title"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_place_holder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:lines="2"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description_placeholder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1" />

    </LinearLayout>

</ScrollView>