<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creator.CancelDialogFragment">

    <TextView
        android:id="@+id/cancel_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discard_your_mashup"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/cancel_dialog_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/your_progress_will_be_irreversibly_lost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_dialog_title" />

    <Button
        android:id="@+id/cancel_dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toStartOf="@+id/cancel_dialog_discard_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_dialog_text" />

    <Button
        android:id="@+id/cancel_dialog_discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/discard"
        android:textColor="@color/sliderRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/cancel_dialog_text" />
</androidx.constraintlayout.widget.ConstraintLayout>