<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/player_controls_color"
    tools:context=".DetailsFullscreen.DetailsViewFullscreen">

    <LinearLayout
        android:id="@+id/sec_controlvid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/exo_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_play"
            app:tint="@color/white"
            android:contentDescription="@string/play_button_description" />

        <ImageView
            android:id="@+id/exo_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_pause"
            app:tint="@color/white"
            android:contentDescription="@string/pause_button_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_controlvid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_of"
                android:textColor="#CBCDC8"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#CBCDC8"/>

            <ImageView
                android:id="@+id/exit_fullscreen_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_fullscreen_exit_24"
                app:tint="@color/white"
                android:contentDescription="@string/exit_fullscreen_description" />
        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            app:unplayed_color="#45424E"
            app:played_color="@color/secondaryColor"
            app:scrubber_color="@color/secondaryColor"/>

    </LinearLayout>

</RelativeLayout>