<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/blackhole"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/thumbnail"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/title_place_holder"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:lines="2"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/duration_placeholder"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:lines="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>